fixing bug 142065 - when I right click delete a message, the wrong message gets deleted. r=varga, sr=sspitzer